--- a/app/webroot/css/alfainmo.css
+++ b/app/webroot/css/alfainmo.css
@@ -135,10 +135,11 @@ div.input-group .form-control-2 ul.select2-choices { height: 34px !important; pa
  * Mapas
  */
 #map-search-canvas { height: 100%; margin: 0px; padding: 0px }
-#map-search-input { background-color: #fff; padding: 0 11px 0 13px; width: 400px; font-family: Roboto; font-size: 15px; font-weight: 300; text-overflow: ellipsis; }
+#map-search-input { background-color: #fff; padding: 0 11px 0 13px; width: 400px; text-overflow: ellipsis; margin-top: 0 }
 #map-search-input:focus { border-color: #4d90fe; margin-left: -1px; padding-left: 14px; width: 401px; }
 
 #buscarMapa_form div.input-group { width: 100%; }
+
 
 .pac-container { z-index: 1140; }
 .map-dialog-wrapper { height: 320px; }
